[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-codingagent-sync"
version = "0.1.0"
description = "Sync Pi coding agent models.json with models served by a vLLM/llama.cpp server"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
pi-sync = "pi_sync.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["pi_sync"]
branch = true

[tool.coverage.report]
show_missing = true
